fix testów globeMap